settings tab content collapsed height fix

--- a/react/src/styles/index.scss
+++ b/react/src/styles/index.scss
@@ -272,7 +272,7 @@ body {
       transition: all .3s;
 
       &.collapse {
-        height: 10px;
+        height: 0;
       }
     }
   }
